5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1712_2498.log
== SUBMITION (2019-05-13 14:29:39) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pa=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=na+((na*pa)/100)
   B=nb+((nb*pb)/100)
	t=t+1
print(t)	
	
-- EXECUTION TIME:
0.187397
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 13
    B=nb+((nb*pb)/100)
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:30:07) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pb=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=na+((na*pa)/100)
   B=nb+((nb*pb)/100)
	t=t+1
print(t)	
	
-- EXECUTION TIME:
0.15021
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 13
    B=nb+((nb*pb)/100)
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:30:26) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pb=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=na+((na*pa)/100)
   B=nb+((nb*pb)/100)
	t=t+1
print(t)	
	
-- ERROR:
File "XXXX", line 13
    B=nb+((nb*pb)/100)
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:31:29) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pb=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=A+((A*pa)/100)
	B=B+ ((B+pb)/100)
	t=t+1
print(t)	
	
-- EXECUTION TIME:
0.140937
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
4
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
23
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:31) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pb=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=A+((A*pa)/100)
	B=B+ ((B+pb)/100)
	t=t+1
print(t)	
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:32:15) 
-- CODE:
na=int(input("na:"))
nb=int(input("nb:"))
pa=float(input("pa:"))
pb=float(input("pb:"))

A=na+((na*pa)/100)
B=nb+((nb*pb)/100)

t=1

while(A<B):
	A=A+((A*pa)/100)
	B=B+ ((B*pb)/100)
	t=t+1
print(t)	
	
-- EXECUTION TIME:
0.174631
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
